syntax = "proto3";

option csharp_namespace = "domain.grpClient";


service LoginService {
  rpc login(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
}
